[tool.poetry]
name = "rl_challenge"
version = "0.1.0"
description = ""
authors = ["Yuki Wada <yuki.w.228285@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
mecab-python-windows = [
    { version = "0.996.3", platform = 'win32' }
]
mecab-python3 = [
    { version = "0.996.3", platform = 'linux' }
]
gym = {extras = ["all"], version = "^0.18.0"}
numpy = "^1.19.5"
pandas = "^1.2.0"
tqdm = "^4.56.0"
dill = "^0.3.3"
matplotlib = "^3.3.3"
PettingZoo = "^1.5.2"
SuperSuit = "^2.5.0"
torch = {url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp38-cp38-win_amd64.whl"}
Box2D = "^2.3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.812"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
